# OpenVAS-MCP

./: .coveragerc-integration  .dockerignore  .gitignore  .grype.yaml  Dockerfile  README.md  SECURITY.md  compose.override.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  coverage.yml  docker.yml  integration.yml  mirror-greenbone-images.yml  release.yml  seed-image-cache.yml  startup-egress.yml  telemetry-audit.yml  vuln-scan.yml
docker/openvas/: compose.ci.yml  compose.yaml
docs/: architecture.md  architecture.mmd  ci.md  configuration.md  design.md
examples/: policy.yaml
openvas_mcp/: __init__.py  __main__.py  auth.py  config.py  gvm_client.py  logging_config.py  policy.py  server.py
tests/: conftest.py  test_auth.py  test_config.py  test_policy.py  test_server.py
tests/fixtures/: policy_clients.yaml  policy_default_only.yaml  policy_max_scans.yaml
tests/integration/: conftest.py  test_integration.py
