[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "openvas-mcp"
version = "0.4.2"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.1",
    "python-gvm>=27.1.0",
    "pyyaml>=6.0.3",
    "jaraco.context>=6.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "genbadge[coverage]>=1.1.3",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "types-PyYAML>=6.0.12.20260510",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openvas_mcp*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["openvas_mcp"]
omit = [
    "openvas_mcp/__main__.py",      # entry point — needs integration test
    "openvas_mcp/logging_config.py", # logging setup — needs integration test
    "openvas_mcp/gvm_client.py",     # connection factory — needs integration test
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "gvm.*"
ignore_errors = true
